Make sure we hide the keyboard on mobile devices when the initial search is complete. This more closely matches native app behaviour.

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,7 +1,7 @@
 .search-bar {
 	position: absolute;
 	left: 0;
-	padding: calc(30% + 125px) 0 15px;
+	padding: calc(25% + 125px) 0 15px;
 	width: 100%;
     min-width: 280px;
 	z-index: 100;
@@ -81,15 +81,9 @@
 	color: #fff;
 }
 
-@media (min-width: 380px) {
-	.search-bar {
-		padding-top: calc(30% + 140px);
-	}
-}
-
 @media (min-width: 450px) {
 	.search-bar {
-		padding-bottom: 30px;
+		padding: calc(30% + 145px) 0 30px;
 	}
 
 	.searching .search-bar { 
